--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,17 +6,11 @@ set -g default-terminal 'screen-256color'
 set -g status-fg white
 set -g status-bg black
 
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /usr/bin/fish
 set-option -g status-position top
 set-option -g status-interval 1
 set-option -g status-bg colour238
 
-#set -g pane-border-fg green
-#set -g pane-border-fg black
-#set -g pane-active-border-fg white
-#set -g pane-active-border-fg yellow
-
-#setw -g mouse
 setw -g mode-keys vi
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
