--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,10 +6,14 @@ set -g default-terminal 'screen-256color'
 set -g status-fg white
 set -g status-bg black
 
+set-option -g status-left '#[bg=colour235][#S] #[default]'
+set-option -g status-right ''
+set-option -g window-status-format ' #I: #W '
+set-option -g window-status-current-format '#[bg=colour27, bold] #I: #W #[default]'
 set-option -g default-shell /usr/bin/fish
-set-option -g status-position top
+set-option -g status-position bottom
 set-option -g status-interval 1
-set-option -g status-bg colour238
+set-option -g status-bg colour234
 
 setw -g mode-keys vi
 
