--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,6 @@ set -sg escape-time 1
 set -g default-terminal 'screen-256color'
 set -g status-fg white
 set -g status-bg black
-
 set-option -g status-left '#[bg=colour235][#S] #[default]'
 set-option -g status-right ''
 set-option -g window-status-format ' #I: #W '
@@ -16,6 +15,11 @@ set-option -g status-interval 1
 set-option -g status-bg colour234
 
 setw -g mode-keys vi
+set-window-option -g mode-keys vi
+
+bind-key -T copy-mode-vi v   send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y   send-keys -X copy-pipe "xsel -bi"
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind h select-pane -L
