--- a/.config/yabar/yabar.conf
+++ b/.config/yabar/yabar.conf
@@ -1,7 +1,7 @@
 bar-list = ["topbar"];
 topbar: {
   font: "Ricty Discord, FontAwesome Bold 12";
-  block-list: ["ya_ws", "ya_title", "ya_cpu", "ya_mem", "ya_volume", "ya_bat", "ya_date"];
+  block-list: ["ya_ws", "ya_title", "music", "delimiter", "ya_cpu", "ya_volume", "ya_bat", "ya_date"];
   position: "top";
   height: 20;
   background-color-rgb: 0x161618;
@@ -16,19 +16,34 @@ topbar: {
   ya_ws: {
     exec: "YABAR_WORKSPACE";
     align: "left";
-    fixed-size: 44;
+    fixed-size: 50;
     internal-option1: "I II III IV V VI VII VIII IX X";
   }
   ya_title: {
     exec: "YABAR_TITLE";
     align: "left";
     justify: "left";
-    fixed-size: 840;
+    fixed-size: 860;
+  }
+  music: {
+    exec: "~/.cargo/bin/cmus-title";
+    align: "right";
+    justify: "right";
+    type: "periodic";
+    interval: 1;
+    fixed-size: 580;
+  }
+  delimiter: {
+    exec: "#";
+    align: "right"
+    fixed-size: 20;
+    type: "once";
   }
   ya_cpu: {
     exec: "YABAR_CPU";
     align: "right";
-    fixed-size: 90;
+    justify: "center";
+    fixed-size: 75;
     interval: 1;
     internal-prefix: " ";
     internal-suffix: "%";
@@ -37,6 +52,7 @@ topbar: {
   ya_mem:{
     exec: "YABAR_MEMORY";
     align: "right";
+    justify: "left";
     fixed-size: 80;
     interval: 1;
     internal-prefix: "";
@@ -45,19 +61,23 @@ topbar: {
   ya_volume: {
     exec: "bash ~/.config/yabar/get-volume.bash";
     align: "right";
+    justify: "center";
     type: "periodic";
     interval: 1;
-    fixed-size: 80;
+    fixed-size: 75;
+    #background-color-rgb: 0x0000ff;
   }
   ya_bat: {
     exec: "YABAR_BATTERY";
     align: "right";
+    justify: "center";
     fixed-size: 80;
     interval: 1;
     internal-suffix: "% ";
     internal-option1: "BAT0";
     internal-option2: "    ";
     internal-spacing: true;
+    #background-color-rgb: 0xff0000;
   }
   ya_date: {
     exec: "YABAR_DATE";
@@ -65,5 +85,6 @@ topbar: {
     fixed-size: 180;
     interval: 2;
     internal-option1: "%a %_b %_d %_I:%M %p";
+    #background-color-rgb: 0x00ff00;
   }
 }
