--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,18 +1,17 @@
 unbind C-b
 
 set -g prefix C-Space
-set -sg escape-time 1
+set -sg escape-time 0
 set -g default-terminal 'screen-256color'
-set -g status-fg white
-set -g status-bg black
-set-option -g status-left '#[bg=colour235][#S] #[default]'
+set-option -g status-left '[#S] '
 set-option -g status-right ''
 set-option -g window-status-format ' #I: #W '
-set-option -g window-status-current-format '#[bg=colour27, bold] #I: #W #[default]'
+set-option -g window-status-current-format '#[bg=colour237, fg=colour254, bold] #I: #W #[default]'
 set-option -g default-shell /usr/bin/fish
 set-option -g status-position bottom
 set-option -g status-interval 1
-set-option -g status-bg colour234
+set-option -g status-fg colour235
+set-option -g status-bg colour252
 
 setw -g mode-keys vi
 set-window-option -g mode-keys vi
