--- a/archlinux/HOME/.config/yabar/yabar.conf
+++ b/archlinux/HOME/.config/yabar/yabar.conf
@@ -1,6 +1,6 @@
 bar-list = ["topbar"];
 topbar: {
-  font: "Ricty Discord, FontAwesome Bold 12";
+  font: "Ricty Diminished Discord, FontAwesome Bold 12";
   block-list: ["ya_ws", "ya_title", "music", "delimiter", "ya_cpu", "ya_volume", "ya_bat", "ya_date"];
   position: "top";
   height: 20;
