--- a/common/HOME/.config/ranger/rc.conf
+++ b/common/HOME/.config/ranger/rc.conf
@@ -2,3 +2,6 @@ set show_hidden true
 set draw_borders true
 set preview_images true
 set colorscheme mytheme
+
+map s shell $SHELL
+map S console shell%space
