--- a/linux/HOME/.config/yabar/yabar.conf
+++ b/linux/HOME/.config/yabar/yabar.conf
@@ -1,9 +1,9 @@
 bar-list = ["topbar"];
 topbar: {
-  font: "Ricty Diminished Discord, FontAwesome Bold 12";
+  font: "Cica Bold 12";
   block-list: ["ya_ws", "ya_title", "music", "delimiter", "ya_cpu", "ya_volume", "ya_bat", "ya_date"];
   position: "top";
-  height: 20;
+  height: 22;
   background-color-rgb: 0x161618;
   border-size: 0;
   gap-horizontal: 0;
