--- a/linux/HOME/.config/yabar/yabar.conf
+++ b/linux/HOME/.config/yabar/yabar.conf
@@ -29,8 +29,7 @@ topbar: {
     exec: "~/.cargo/bin/cmus-title";
     align: "right";
     justify: "right";
-    type: "periodic";
-    interval: 1;
+    type: "persist";
     fixed-size: 580;
   }
   delimiter: {
