--- a/linux/HOME/.config/yabar/yabar.conf
+++ b/linux/HOME/.config/yabar/yabar.conf
@@ -26,7 +26,7 @@ topbar: {
     fixed-size: 860;
   }
   music: {
-    exec: "~/.cargo/bin/cmus-title";
+    exec: "~/.cargo/bin/cmus-title --interval 500";
     align: "right";
     justify: "right";
     type: "persist";
