--- a/common/home/.tmux.conf
+++ b/common/home/.tmux.conf
@@ -8,7 +8,7 @@ set-option -g status-right ''
 set-option -g window-status-format ' #I: #W '
 set-option -g window-status-current-format '#[bg=colour237, fg=colour254, bold] #I: #W #[default]'
 set-option -g default-shell /usr/bin/fish
-set-option -g status-position bottom
+set-option -g status-position top
 set-option -g status-interval 1
 set-option -g status-fg colour235
 set-option -g status-bg colour252
