--- a/linux/home/.config/yabar/yabar.conf
+++ b/linux/home/.config/yabar/yabar.conf
@@ -1,12 +1,13 @@
 bar-list = ["topbar"];
 topbar: {
-  font: "Cica Bold 12";
+  font: "Cica Bold 10";
   block-list: ["ya_ws", "ya_title", "music", "delimiter", "ya_cpu", "ya_volume", "ya_bat", "ya_date"];
   position: "top";
-  height: 22;
+  height: 18;
   background-color-rgb: 0x161618;
+  background-color-nowindow-argb: 0xff161618;
   border-size: 0;
-  gap-horizontal: 0;
+  gap-horizontal: 12;
   gap-vertical: 0;
   underline-size: 0;
   overline-size: 0;
@@ -42,7 +43,7 @@ topbar: {
     exec: "YABAR_CPU";
     align: "right";
     justify: "center";
-    fixed-size: 75;
+    fixed-size: 70;
     interval: 1;
     internal-prefix: " ";
     internal-suffix: "%";
@@ -63,14 +64,14 @@ topbar: {
     justify: "center";
     type: "periodic";
     interval: 1;
-    fixed-size: 75;
+    fixed-size: 70;
     #background-color-rgb: 0x0000ff;
   }
   ya_bat: {
     exec: "YABAR_BATTERY";
     align: "right";
     justify: "center";
-    fixed-size: 80;
+    fixed-size: 75;
     interval: 1;
     internal-suffix: "% ";
     internal-option1: "BAT0";
@@ -81,7 +82,7 @@ topbar: {
   ya_date: {
     exec: "YABAR_DATE";
     align: "right";
-    fixed-size: 180;
+    fixed-size: 160;
     interval: 2;
     internal-option1: "%a %_b %_d %_I:%M %p";
     #background-color-rgb: 0x00ff00;
