--- a/linux/home/.config/yabar/yabar.conf
+++ b/linux/home/.config/yabar/yabar.conf
@@ -27,7 +27,8 @@ topbar: {
     fixed-size: 860;
   }
   music: {
-    exec: "~/.cargo/bin/cmus-title --interval 500";
+    # exec: "~/.cargo/bin/cmus-title --interval 500";
+    exec: "~/.cargo/bin/report --interval 500";
     align: "right";
     justify: "right";
     type: "persist";
