--- a/common/home/.config/alacritty/alacritty.yml
+++ b/common/home/.config/alacritty/alacritty.yml
@@ -93,6 +93,8 @@ font:
     x: 0
     y: 0
 
+  scale_with_dpi: true
+
   # OS X only: use thin stroke font rendering. Thin strokes are suitable
   # for retina displays, but for non-retina you probably want this set to
   # false.
