--- a/linux/home/.config/systemd/user/xkeysnail.service
+++ b/linux/home/.config/systemd/user/xkeysnail.service
@@ -3,7 +3,7 @@ Description=xkeysnail
 
 [Service]
 KillMode=process
-ExecStart=/bin/sh -c '/usr/bin/xkeysnail /usr/local/share/xkeysnail/config.py > /dev/null'
+ExecStart=/bin/sh -c 'sudo -u xkeysnail /opt/xkeysnail/bin/xkeysnail /opt/xkeysnail/config.py > /dev/null'
 Type=simple
 Restart=always
 RestartSec=1
