--- a/common/home/.config/alacritty/alacritty.yml
+++ b/common/home/.config/alacritty/alacritty.yml
@@ -93,6 +93,10 @@ font:
     x: 0
     y: 0
 
+  # Scale the font size based on the monitor's DPI. This will lead to bigger text on HiDPI
+  # screens and make reading text a little easier.
+  # On X11 it is possible to change the DPI for each instance of alacritty by using
+  # `WINIT_HIDPI_FACTOR=1.0 alacritty` to scale the font.
   scale_with_dpi: true
 
   # OS X only: use thin stroke font rendering. Thin strokes are suitable
@@ -111,8 +115,17 @@ custom_cursor_colors: false
 colors:
   # Default colors
   primary:
-    background: '0x1b1d1e'
-    foreground: '0xeaeaea'
+    background: '0x282828'
+    foreground: '0xfbf1c7'
+
+    # (Optional) Bright and Dim foreground colors
+    #
+    # The dimmed foreground color is calculated automatically if it is not present.
+    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
+    # is `false`, the normal foreground color will be used.
+    #
+    # dim_foreground: '0x9a9a9a'
+    # bright_foreground: '0xffffff'
 
   # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
@@ -233,6 +246,9 @@ hide_cursor_when_typing: false
 # - Beam
 cursor_style: Block
 
+# Whether the cursor should be a hollow block on window focus loss
+unfocused_hollow_cursor: true
+
 # Live config reload (changes require restart)
 live_config_reload: true
 
@@ -288,6 +304,8 @@ live_config_reload: true
 key_bindings:
   - { key: V,        mods: Control|Alt,     action: Paste                }
   - { key: C,        mods: Control|Alt,     action: Copy                 }
+  - { key: Paste,                   action: Paste                        }
+  - { key: Copy,                    action: Copy                         }
   - { key: Q,        mods: Command, action: Quit                         }
   - { key: W,        mods: Command, action: Quit                         }
   - { key: Insert,   mods: Shift,   action: PasteSelection               }
