--- a/common/home/.tmux.conf
+++ b/common/home/.tmux.conf
@@ -7,7 +7,7 @@ set-option -g status-left '[#S] '
 set-option -g status-right ''
 set-option -g window-status-format ' #I: #W '
 set-option -g window-status-current-format '#[bg=colour237, fg=colour254, bold] #I: #W #[default]'
-set-option -g default-shell /usr/bin/fish
+set-option -g default-shell /usr/bin/zsh
 set-option -g status-position top
 set-option -g status-interval 1
 set-option -g status-fg colour235
