--- a/common/home/.config/alacritty/alacritty.yml
+++ b/common/home/.config/alacritty/alacritty.yml
@@ -152,7 +152,7 @@ render_timer: false
 persistent_logging: false
 
 # If `true`, bold text is drawn using the bright color variants.
-draw_bold_text_with_bright_colors: true
+draw_bold_text_with_bright_colors: false
 
 # Colors (Tomorrow Night Bright)
 colors:
@@ -178,26 +178,44 @@ colors:
   #  cursor: '0xffffff'
 
   # Normal colors
+  #normal:
+  #  black:   '0x000000'
+  #  red:     '0xd54e53'
+  #  green:   '0xb9ca4a'
+  #  yellow:  '0xe6c547'
+  #  blue:    '0x7aa6da'
+  #  magenta: '0xc397d8'
+  #  cyan:    '0x70c0ba'
+  #  white:   '0xffffff'
   normal:
-    black:   '0x000000'
-    red:     '0xd54e53'
-    green:   '0xb9ca4a'
-    yellow:  '0xe6c547'
-    blue:    '0x7aa6da'
-    magenta: '0xc397d8'
-    cyan:    '0x70c0ba'
-    white:   '0xffffff'
+    black:    '0x000000'
+    red:      '0xf92672'
+    green:    '0xa6e22e'
+    yellow:   '0xf4bf75'
+    blue:     '0x66d9ef'
+    magenta:  '0xae81ff'
+    cyan:     '0xa1efe4'
+    white:    '0xf8f8f2'
 
   # Bright colors
+  #bright:
+  #  black:   '0x666666'
+  #  red:     '0xff3334'
+  #  green:   '0x9ec400'
+  #  yellow:  '0xe7c547'
+  #  blue:    '0x7aa6da'
+  #  magenta: '0xb77ee0'
+  #  cyan:    '0x54ced6'
+  #  white:   '0xffffff'
   bright:
-    black:   '0x666666'
-    red:     '0xff3334'
-    green:   '0x9ec400'
-    yellow:  '0xe7c547'
-    blue:    '0x7aa6da'
-    magenta: '0xb77ee0'
-    cyan:    '0x54ced6'
-    white:   '0xffffff'
+    black:   '0x75715e'
+    red:     '0xf92672'
+    green:   '0xa6e22e'
+    yellow:  '0xf4bf75'
+    blue:    '0x66d9ef'
+    magenta: '0xae81ff'
+    cyan:    '0xa1efe4'
+    white:   '0xf9f8f5'
 
   # Dim colors
   #
