--- a/common/home/.config/Code - OSS/User/settings.json
+++ b/common/home/.config/Code - OSS/User/settings.json
@@ -1,21 +1,43 @@
 {
-    "editor.tabSize": 8,
-    "editor.renderWhitespace": "boundary",
-    "editor.cursorStyle": "block",
-    "editor.fontFamily": "Cica",
-    "editor.fontSize": 12,
-    "editor.cursorBlinking": "solid",
-    "editor.fontLigatures": true,
-    "editor.fontWeight": "bold",
-    "editor.lineHeight": 12,
-    "vim.easymotion": true,
-    "workbench.colorTheme": "Monokai Dimmed",
-    "powermode.enabled": true,
-    "powermode.enableShake": false,
-    "window.zoomLevel": 0,
-    "powermode.enableStatusBarComboCounter": false,
-    "powermode.enableStatusBarComboTimer": false,
-    "powermode.explosionOffset": 0.2,
-    "vim.cursorStylePerMode.insert": "block-outline",
-    "files.autoSave": "afterDelay"
+  "editor.cursorStyle": "block",
+  "editor.fontFamily": "Cica",
+  "editor.fontSize": 12,
+  "editor.cursorBlinking": "solid",
+  "editor.fontLigatures": true,
+  "editor.fontWeight": "bold",
+  "editor.lineHeight": 12,
+  "editor.lineNumbers": "relative",
+  "workbench.colorTheme": "Monokai",
+  "window.zoomLevel": 0,
+  "window.menuBarVisibility": "toggle",
+  "files.autoSave": "afterDelay",
+  "vim.easymotion": true,
+  "vim.cursorStylePerMode.insert": "line",
+  "vim.normalModeKeyBindingsNonRecursive": [
+    {
+      "before": [
+        "<C-k>"
+      ],
+      "after": [
+        "<C-v>",
+        "$",
+        "c"
+      ]
+    }
+  ],
+  "powermode.enableStatusBarComboCounter": false,
+  "powermode.enableStatusBarComboTimer": false,
+  "powermode.explosionOffset": 0.2,
+  "powermode.explosionDuration": 500,
+  "powermode.explosionSize": 10,
+  "powermode.presets": "simple-rift",
+  "powermode.enableShake": false,
+  "rust.clippy_preference": "on",
+  "editor.minimap.enabled": false,
+  "rust-analyzer.cargo-watch.command": "clippy",
+  "rust-analyzer.enableCargoWatchOnStartup": "enabled",
+  "rust-analyzer.lruCapacity": 4096,
+  "rust-analyzer.enableEnhancedTyping": false,
+  "rust-analyzer.highlightingOn": true,
+  "rust-analyzer.displayInlayHints": false
 }
