--- a/linux/home/.config/polybar/config
+++ b/linux/home/.config/polybar/config
@@ -34,7 +34,7 @@ height = 20
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 3.0
-fixed-center = false
+fixed-center = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -54,7 +54,8 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = Cica:pixelsize=11:bold;1
+font-0 = "Cica:pixelsize=11:bold;1"
+font-1 = "Iosevka Nerd Font:pixelsize=12;2"
 ; font-1 = NotoSans Nerd Font Mono:pixelsize=9:bold;0
 ; font-2 = unifont:fontformat=truetype:size=8:antialias=false;0
 ; font-3 = FontAwesome:pixelsize=10;1
@@ -63,8 +64,9 @@ modules-left = bspwm xwindow
 modules-center =
 modules-right = wlan cpu alsa battery date
 
-tray-position = left
+tray-position = center
 tray-padding = 2
+tray-offset-x = 390
 ;tray-transparent = true
 ;tray-background = #0063ff
 
@@ -135,7 +137,7 @@ cursor-scroll = ns-resize
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:100:...%
+label = %title:0:140:...%
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -166,21 +168,21 @@ label-unmounted-foreground = ${colors.foreground-alt}
 [module/bspwm]
 type = internal/bspwm
 
-label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
-label-focused-padding = 2
+label-focused = 
+; label-focused-background = ${colors.background-alt}
+; label-focused-underline= ${colors.primary}
+label-focused-padding = 0
 
-label-occupied = %index%
-label-occupied-padding = 2
+label-occupied = 
+label-occupied-padding = 0
 
-label-urgent = %index%!
+label-urgent = 
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-urgent-padding = 0
 
-label-empty = %index%
+label-empty = 
 label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
+label-empty-padding = 0
 
 ; Separator in between workspaces
 ; label-separator = |
@@ -393,8 +395,7 @@ battery = BAT0
 adapter = AC
 full-at = 98
 
-; format-charging = <animation-charging> <label-charging>
-format-charging = <ramp-capacity> <label-charging>
+format-charging = <animation-charging> <label-charging>
 label-charging = %percentage:3%%
 ; format-charging-underline = #ffb52a
 
@@ -409,18 +410,35 @@ label-full = %percentage:3%%
 ; format-full-prefix-foreground = ${colors.foreground-alt}
 ; format-full-underline = ${self.format-charging-underline}
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+; ramp-capacity-0 = 
+; ramp-capacity-1 = 
+; ramp-capacity-2 = 
+; ramp-capacity-3 = 
+; ramp-capacity-4 = 
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-5 = 
+ramp-capacity-6 = 
+ramp-capacity-7 = 
+ramp-capacity-8 = 
+ramp-capacity-9 = 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-5 = 
+animation-charging-6 = 
 ; ramp-capacity-foreground = ${colors.foreground-alt}
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
-animation-charging-framerate = 750
+; animation-charging-0 = 
+; animation-charging-1 = 
+; animation-charging-2 = 
+animation-charging-foreground = ${colors.foreground}
+animation-charging-framerate = 500
 
 ; animation-discharging-0 = 
 ; animation-discharging-1 = 
