--- a/common/home/.config/Code - OSS/User/settings.json
+++ b/common/home/.config/Code - OSS/User/settings.json
@@ -40,5 +40,6 @@
   "rust-analyzer.enableEnhancedTyping": false,
   "rust-analyzer.highlightingOn": true,
   "rust-analyzer.displayInlayHints": false,
-  "python.jediEnabled": false
+  "python.jediEnabled": false,
+  "rust-analyzer.checkOnSave.command": "clippy"
 }
