--- a/common/home/.gitconfig
+++ b/common/home/.gitconfig
@@ -1,3 +1,7 @@
+[core]
+	pager = delta
+[interactive]
+	diffFilter = delta --color-only
 [url "git@github.com:"]
 	pushinsteadof = https://github.com
 [url "git@bitbucket.org:"]
@@ -10,6 +14,8 @@
 	gpgsign = true
 [ghq]
 	root = ~/src
+[delta]
+	syntax-theme = Monokai Extended
 [mkrepo]
 	service = github.com
 	username = qryxip
