--- a/common/home/.config/Code - OSS/User/settings.json
+++ b/common/home/.config/Code - OSS/User/settings.json
@@ -43,5 +43,12 @@
   "rust-analyzer.highlightingOn": true,
   "rust-analyzer.displayInlayHints": false,
   "python.jediEnabled": false,
-  "rust-analyzer.checkOnSave.command": "clippy"
+  "rust-analyzer.checkOnSave.command": "clippy",
+  "rust-analyzer.cargo.allFeatures": true,
+  "rust-analyzer.cargo.loadOutDirsFromCheck": true,
+  "rust-analyzer.procMacro.enable": true,
+  "rust-analyzer.inlayHints.enable": false,
+  "rust-analyzer.diagnostics.disabled": [
+    "unresolved-import"
+  ]
 }
