--- a/linux/home/.config/fcitx/conf/fcitx-keyboard.config
+++ b/linux/home/.config/fcitx/conf/fcitx-keyboard.config
@@ -1,25 +1,25 @@
 [Keyboard]
-# 候補を選択時に空白を追加して確定する
+# Commit with extra space when choose candidate word
 # Available Value:
 # True False
 #CommitWithExtraSpace=False
-# 修飾キーを選択
+# Choose key modifier
 # Available Value:
 # None
 # Alt
 # Ctrl
 # Shift
 #ChooseModifier=Alt
-# サジェストの表示
+# Toggle the word hint
 #HotkeyToggleWordHint=CTRL_ALT_H
-# サジェスト機能を開始する最低文字数
+# Minimum length to trigger word hint
 #MinimumHintLength=1
-# 最大スペルヒントリスト数
+# Maximum length of spell hint list
 #MaximumHintLength=5
-# 既存の文字列を確定するときに Enter を使う
+# Use enter to commit the existing string
 # Available Value:
 # True False
 #UseEnterToCommit=False
-# 現在の入力バッファをユーザー辞書に追加
+# Add current input buffer to user dictionary
 #HotkeyAddToUserDict=CTRL_ALT_N
 
