--- a/linux/home/.config/polybar/config
+++ b/linux/home/.config/polybar/config
@@ -63,7 +63,7 @@ font-1 = "Iosevka Nerd Font:pixelsize=12;2"
 
 modules-left = bspwm xwindow
 modules-center = date
-modules-right = wlan cpu alsa battery
+modules-right = eth wlan cpu alsa battery
 
 tray-position = right
 tray-padding = 1
@@ -115,10 +115,10 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm
 modules-center =
-modules-right = filesystem xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
+modules-right = filesystem xbacklight alsa pulseaudio xkeyboard memory cpu eth wlan battery temperature date powermenu
 
-tray-position = right
-tray-padding = 2
+;tray-position = right
+;tray-padding = 1
 ;tray-transparent = true
 ;tray-background = #0063ff
 
@@ -137,7 +137,8 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 [bar/main-leftwm]
-monitor = ${env:MONITOR:eDP1}
+monitor = ${env:MONITOR:DP1}
+monitor-fallback = eDP1
 width = 100%
 height = 20
 ;offset-x = 1%
@@ -151,31 +152,29 @@ foreground = ${colors.foreground}
 line-size = 3
 line-color = #f00
 
-; border-size = 12
-border-left-size = 12
-border-right-size = 12
-border-top-size = 0
+border-left-size = 152
+border-right-size = 152
+border-top-size = 12
 border-color = #00000000
 
-padding-left = 0
+padding-left = 1
 padding-right = 2
 
 module-margin-left = 1
-module-margin-right = 2
+module-margin-right = 1
 
-font-0 = "Cica:pixelsize=11:bold;1"
+font-0 = "Cica:pixelsize=12:bold;1"
 font-1 = "Iosevka Nerd Font:pixelsize=12;2"
 ; font-1 = NotoSans Nerd Font Mono:pixelsize=9:bold;0
 ; font-2 = unifont:fontformat=truetype:size=8:antialias=false;0
 ; font-3 = FontAwesome:pixelsize=10;1
 
 modules-left = ewmh xwindow
-modules-center =
-modules-right = wlan cpu alsa battery date
+modules-center = date
+modules-right = eth wlan cpu alsa battery
 
-tray-position = center
-tray-padding = 2
-tray-offset-x = 370
+tray-position = right
+tray-padding = 1
 ;tray-transparent = true
 ;tray-background = #0063ff
 
@@ -208,7 +207,7 @@ label-urgent-padding = 0
 label-urgent-foreground = ${colors.foreground}
 label-urgent-background = ${colors.background}
 ;label-urgent-underline  = ${colors.alert}
-label-empty = "sssssssssddsadsa
+label-empty = ""
 ;label-empty-foreground = ${colors.foreground}
 
 [module/xwindow]
@@ -359,14 +358,15 @@ interface = wlp0s20f3
 interval = 1.0
 
 format-connected = <label-connected>
+format-connected-prefix = "直 "
 format-connected-underline =
 label-connected = %upspeed:9% %downspeed:9%
 
-;format-disconnected =
-format-disconnected = <label-disconnected>
-format-disconnected-underline = ${self.format-connected-underline}
-label-disconnected = %ifname% disconnected
-label-disconnected-foreground = ${colors.foreground-alt}
+format-disconnected = "睊"
+;format-disconnected = <label-disconnected>
+;format-disconnected-underline = ${self.format-connected-underline}
+;label-disconnected = %ifname% disconnected
+;label-disconnected-foreground = ${colors.foreground-alt}
 
 ; ramp-signal-0 = 
 ; ramp-signal-1 = 
@@ -375,15 +375,17 @@ label-disconnected-foreground = ${colors.foreground-alt}
 
 [module/eth]
 type = internal/network
-interface = net0
-interval = 3.0
+interface = enp4s0
+interval = 1.0
 
-format-connected-underline = #55aa55
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %local_ip%
+;format-connected-underline = #55aa55
+;format-connected-prefix = " "
+;format-connected-prefix-foreground = ${colors.foreground-alt}
+;label-connected = %local_ip%
+label-connected = %upspeed:9% %downspeed:9%
+format-connected-prefix = " "
 
-format-disconnected =
+format-disconnected = ""
 ;format-disconnected = <label-disconnected>
 ;format-disconnected-underline = ${self.format-connected-underline}
 ;label-disconnected = %ifname% disconnected
