--- a/linux/ln/homedir/.config/polybar/config
+++ b/linux/ln/homedir/.config/polybar/config
@@ -137,13 +137,14 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 [bar/main-leftwm]
-monitor = ${env:MONITOR:DP1}
-monitor-fallback = eDP1
+monitor = ${env:MONITOR:DP-0}
+monitor-fallback = HDMI-0
 width = 100%
-height = 20
+height = 24
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 3.0
+bottom = false
 fixed-center = true
 
 background = ${colors.background}
@@ -154,7 +155,7 @@ line-color = #f00
 
 border-left-size = 152
 border-right-size = 152
-border-top-size = 12
+border-top-size = 14
 border-color = #00000000
 
 padding-left = 1
@@ -163,15 +164,15 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = "Cica:pixelsize=12:bold;1"
-font-1 = "Iosevka Nerd Font:pixelsize=12;2"
+font-0 = "Cica:pixelsize=14:bold;1"
+font-1 = "Iosevka Nerd Font:pixelsize=14;2"
 ; font-1 = NotoSans Nerd Font Mono:pixelsize=9:bold;0
 ; font-2 = unifont:fontformat=truetype:size=8:antialias=false;0
 ; font-3 = FontAwesome:pixelsize=10;1
 
 modules-left = ewmh xwindow
 modules-center = date
-modules-right = eth wlan cpu alsa battery
+modules-right = eth wlan memory cpu temperature alsa battery
 
 tray-position = right
 tray-padding = 1
@@ -191,6 +192,320 @@ tray-padding = 1
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+[bar/ewmh]
+monitor = ${env:MONITOR:DP-0}
+monitor-fallback = HDMI-0
+bottom = false
+fixed-centor = true
+width = 230
+height = 24
+offset-x = 0
+offset-y = 0
+background = ${colors.background}
+foreground = ${colors.foreground}
+radius = 12.0
+border-left-size = 10
+border-right-size = 10
+border-top-size = 10
+font-0 = "Cica:pixelsize=14:bold;1"
+font-1 = "Iosevka Nerd Font:pixelsize=14;2"
+modules-center = ewmh
+dpi-x = 96
+dpi-y = 96
+click-left =
+click-middle =
+click-right =
+scroll-up =
+scroll-down =
+double-click-left =
+double-click-middle =
+double-click-right =
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+[bar/xwindow]
+monitor = ${env:MONITOR:DP-0}
+monitor-fallback = HDMI-0
+bottom = false
+fixed-centor = true
+width = 1400
+height = 24
+offset-x = 50%:-700
+offset-y = 0
+background = ${colors.background}
+foreground = ${colors.foreground}
+radius = 12.0
+border-left-size = 10
+border-right-size = 10
+border-top-size = 10
+font-0 = "Cica:pixelsize=14:bold;1"
+font-1 = "Iosevka Nerd Font:pixelsize=14;2"
+modules-center = dummy xwindow
+dpi-x = 96
+dpi-y = 96
+click-left =
+click-middle =
+click-right =
+scroll-up =
+scroll-down =
+double-click-left =
+double-click-middle =
+double-click-right =
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+[bar/date]
+monitor = ${env:MONITOR:DP-0}
+monitor-fallback = HDMI-0
+override-redirect = true
+bottom = false
+fixed-centor = true
+width = 220
+height = 24
+offset-x = 100%:-220
+offset-y = 0
+background = ${colors.background}
+foreground = ${colors.foreground}
+radius = 12.0
+border-left-size = 10
+border-right-size = 10
+border-top-size = 10
+font-0 = "Cica:pixelsize=14:bold;1"
+font-1 = "Iosevka Nerd Font:pixelsize=14;2"
+modules-center = date
+dpi-x = 96
+dpi-y = 96
+click-left =
+click-middle =
+click-right =
+scroll-up =
+scroll-down =
+double-click-left =
+double-click-middle =
+double-click-right =
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+[bar/alsa]
+monitor = ${env:MONITOR:DP-0}
+monitor-fallback = HDMI-0
+bottom = true
+fixed-centor = true
+width = 130
+height = 24
+offset-x = 0
+offset-y = 0
+background = ${colors.background}
+foreground = ${colors.foreground}
+radius = 12.0
+line-size = 0
+line-color =
+border-left-size = 10
+border-right-size = 10
+border-bottom-size = 10
+border-top-size = 0
+border-color =
+padding = 0
+module-margin = 0
+font-0 = "Cica:pixelsize=14:bold;1"
+font-1 = "Iosevka Nerd Font:pixelsize=14;2"
+modules-left =
+modules-center = alsa
+modules-right =
+dim-value = 1.0
+wm-name =
+locale =
+tray-position = none
+tray-detached =
+tray-maxsize =
+tray-background =
+tray-offset-x =
+tray-offset-y =
+tray-padding =
+tray-scale =
+dpi-x = 96
+dpi-y = 96
+enable-ipc = false
+click-left =
+click-middle =
+click-right =
+scroll-up =
+scroll-down =
+double-click-left =
+double-click-middle =
+double-click-right =
+cursor-click =
+cursor-scroll =
+
+[bar/battery]
+monitor = ${env:MONITOR:DP-0}
+monitor-fallback = HDMI-0
+bottom = true
+fixed-centor = true
+width = 130
+height = 24
+offset-x = 130
+background = ${colors.background}
+foreground = ${colors.foreground}
+radius = 12.0
+border-left-size = 10
+border-right-size = 10
+border-bottom-size = 10
+font-0 = "Cica:pixelsize=14:bold;1"
+font-1 = "Iosevka Nerd Font:pixelsize=14;2"
+modules-center = battery
+dpi-x = 96
+dpi-y = 96
+
+[bar/temperature]
+monitor = ${env:MONITOR:DP-0}
+monitor-fallback = HDMI-0
+bottom = true
+fixed-centor = true
+width = 130
+height = 24
+offset-x = 260
+background = ${colors.background}
+foreground = ${colors.foreground}
+radius = 12.0
+border-left-size = 10
+border-right-size = 10
+border-bottom-size = 10
+font-0 = "Cica:pixelsize=14:bold;1"
+font-1 = "Iosevka Nerd Font:pixelsize=14;2"
+modules-center = temperature
+dpi-x = 96
+dpi-y = 96
+
+[bar/cpu]
+monitor = ${env:MONITOR:DP-0}
+monitor-fallback = HDMI-0
+bottom = true
+fixed-centor = true
+width = 130
+height = 24
+offset-x = 390
+background = ${colors.background}
+foreground = ${colors.foreground}
+radius = 12.0
+border-left-size = 10
+border-right-size = 10
+border-bottom-size = 10
+font-0 = "Cica:pixelsize=14:bold;1"
+font-1 = "Iosevka Nerd Font:pixelsize=14;2"
+modules-center = cpu
+dpi-x = 96
+dpi-y = 96
+
+[bar/memory]
+monitor = ${env:MONITOR:DP-0}
+monitor-fallback = HDMI-0
+bottom = true
+fixed-centor = true
+width = 160
+height = 24
+offset-x = 520
+background = ${colors.background}
+foreground = ${colors.foreground}
+radius = 12.0
+border-left-size = 10
+border-right-size = 10
+border-bottom-size = 10
+font-0 = "Cica:pixelsize=14:bold;1"
+font-1 = "Iosevka Nerd Font:pixelsize=14;2"
+modules-center = memory
+dpi-x = 96
+dpi-y = 96
+
+[bar/eth]
+monitor = ${env:MONITOR:DP-0}
+monitor-fallback = HDMI-0
+bottom = true
+fixed-centor = true
+width = 300
+height = 24
+offset-x = 680
+background = ${colors.background}
+foreground = ${colors.foreground}
+radius = 12.0
+border-left-size = 10
+border-right-size = 10
+border-bottom-size = 10
+module-margin = 1
+font-0 = "Cica:pixelsize=14:bold;1"
+font-1 = "Iosevka Nerd Font:pixelsize=14;2"
+modules-center = eth
+dpi-x = 96
+dpi-y = 96
+
+[bar/wlan]
+monitor = ${env:MONITOR:DP-0}
+monitor-fallback = HDMI-0
+bottom = true
+fixed-centor = true
+width = 300
+height = 24
+offset-x = 980
+background = ${colors.background}
+foreground = ${colors.foreground}
+radius = 12.0
+border-left-size = 10
+border-right-size = 10
+border-bottom-size = 10
+module-margin = 1
+font-0 = "Cica:pixelsize=14:bold;1"
+font-1 = "Iosevka Nerd Font:pixelsize=14;2"
+modules-center = wlan
+dpi-x = 96
+dpi-y = 96
+
+[bar/playerctl]
+monitor = ${env:MONITOR:DP-0}
+monitor-fallback = HDMI-0
+override-redirect = true
+bottom = true
+fixed-centor = false
+width = 800
+height = 24
+offset-x = 100%:-1020
+background = ${colors.background}
+foreground = ${colors.foreground}
+radius = 12.0
+padding-left = 2
+border-left-size = 10
+border-right-size = 10
+border-bottom-size = 10
+font-0 = "Cica:pixelsize=14:bold;1"
+font-1 = "Iosevka Nerd Font:pixelsize=14;2"
+font-2 = "JoyPixels:style=Regular:scale=10;3"
+modules-left = dummy playerctl
+dpi-x = 96
+dpi-y = 96
+
+[bar/tray]
+monitor = ${env:MONITOR:DP-0}
+monitor-fallback = HDMI-0
+override-redirect = true
+bottom = true
+fixed-centor = true
+width = 220
+height = 24
+offset-x = 100%:-220
+background = ${colors.background}
+foreground = ${colors.foreground}
+radius = 0.0
+border-left-size = 10
+border-right-size = 10
+border-bottom-size = 10
+font-0 = "Cica:pixelsize=14:bold;1"
+font-1 = "Iosevka Nerd Font:pixelsize=14;2"
+modules-left = dummy
+tray-position = right
+tray-maxsize = 18
+tray-offset-x = 0
+dpi-x = 96
+dpi-y = 96
 
 [module/ewmh]
 type = internal/xworkspaces
@@ -212,7 +527,7 @@ label-empty = ""
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:40:...%
+label = %title%
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -349,12 +664,11 @@ interval = 2
 format-prefix = " "
 ; format-prefix-foreground = ${colors.foreground-alt}
 ; format-underline = #4bffdc
-label = %percentage_used%%
+label = %gb_used%
 
 [module/wlan]
 type = internal/network
-; interface = wlp1s0
-interface = wlp0s20f3
+interface = ${env:POLYBAR_WLAN}
 interval = 1.0
 
 format-connected = <label-connected>
@@ -375,7 +689,7 @@ format-disconnected = "睊"
 
 [module/eth]
 type = internal/network
-interface = enp4s0
+interface = ${env:POLYBAR_ETH}
 interval = 1.0
 
 ;format-connected-underline = #55aa55
@@ -470,8 +784,8 @@ ramp-volume-9 = 
 
 [module/battery]
 type = internal/battery
-battery = BAT0
-adapter = AC
+battery = ${env:POLYBAR_BATTERY}
+adapter = ACAD
 full-at = 98
 
 format-charging = <animation-charging> <label-charging>
@@ -527,13 +841,16 @@ animation-discharging-framerate = 750
 
 [module/temperature]
 type = internal/temperature
+
 thermal-zone = 0
-warn-temperature = 60
+hwmon-path = /sys/class/hwmon/hwmon4/temp1_input
+
+warn-temperature = 90
 
 format = <ramp> <label>
-format-underline = #f50a4d
+;format-underline = #f50a4d
 format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
+;format-warn-underline = ${self.format-underline}
 
 label = %temperature-c%
 label-warn = %temperature-c%
@@ -573,15 +890,31 @@ menu-2-0-exec = sudo poweroff
 menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
 
+[module/playerctl]
+type = custom/script
+exec = playerctl metadata -F --format '{{ emoji(status) }} {{ title }}'
+tail = true
+
+[module/dummy]
+type = custom/text
+content = "​"
+
 [settings]
 screenchange-reload = true
+
+compositing-background = source
+compositing-foreground = over
+compositing-overline = dest
+compositing-underline = over
+compositing-border = dest
+
 ;compositing-background = xor
 ;compositing-background = screen
 ;compositing-foreground = source
 ;compositing-border = over
 
 [global/wm]
-margin-top = 5
-margin-bottom = 5
+margin-bottom = 0
+margin-top = 0
 
 ; vim:ft=dosini
