--- a/common/ln/homedir/.gitconfig
+++ b/common/ln/homedir/.gitconfig
@@ -22,3 +22,9 @@
 [mkrepo]
 	service = github.com
 	username = qryxip
+[credential "https://github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/usr/bin/gh auth git-credential
