--- a/linux/ln/homedir/.config/systemd/user/xremap-hhkb-professional2.service
+++ b/linux/ln/homedir/.config/systemd/user/xremap-hhkb-professional2.service
@@ -3,7 +3,7 @@ Description=xremap (only HHKB Professional2)
 
 [Service]
 KillMode=process
-ExecStart=/usr/bin/sudo -u xremap /opt/xremap/xremap /opt/xremap/hhkb-professional2.yml --watch --device 'Topre Corporation HHKB Professional'
+ExecStart=/usr/bin/env RUST_LOG=xremap=info /usr/bin/sudo -u xremap /opt/xremap/xremap /opt/xremap/hhkb-professional2.yml --watch --device 'Topre Corporation HHKB Professional'
 Type=simple
 Restart=always
 RestartSec=1
