--- a/linux/ln/homedir/.config/compton/compton.conf
+++ b/linux/ln/homedir/.config/compton/compton.conf
@@ -57,13 +57,13 @@ glx-copy-from-front = false;
 # Enabled client-side shadows on windows.
 shadow = true;
 # The blur radius for shadows. (default 12)
-shadow-radius = 5;
+shadow-radius = 12;
 # The left offset for shadows. (default -15)
-shadow-offset-x = -5;
+shadow-offset-x = -15;
 # The top offset for shadows. (default -15)
-shadow-offset-y = -5;
+shadow-offset-y = -15;
 # The translucency for shadows. (default .75)
-shadow-opacity = 0.5;
+shadow-opacity = 0.75;
 
 # Set if you want different colour shadows
 # shadow-red = 0.0;
@@ -120,7 +120,7 @@ inactive-opacity-override = false;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
-blur-background-fixed = false;
+blur-background-fixed = true;
 blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'"
@@ -169,7 +169,7 @@ detect-client-opacity = true;
 
 # Specify refresh rate of the screen.
 # If not specified or 0, picom will try detecting this with X RandR extension.
-refresh-rate = 0;
+#refresh-rate = 0;
 
 # Vertical synchronization: match the refresh rate of the monitor
 vsync = true;
@@ -214,6 +214,10 @@ wintypes:
         opacity = 0.85;
         # focus: Whether to always consider windows of this type focused.
         focus = true;
+    };
+    dock =
+    {
+        shadow = false;
     };
 };
 
