Enable `delta.side-by-side` when `[ "$COLUMNS" -gt 200 ]`
Refs: https://github.com/dandavison/delta/issues/359#issuecomment-2845367227

--- a/common/ln/homedir/.gitconfig
+++ b/common/ln/homedir/.gitconfig
@@ -1,5 +1,5 @@
 [core]
-	pager = delta
+	pager = DELTA_FEATURES=$([ "$COLUMNS" -gt 200 ] && echo side-by-side) delta
 [interactive]
 	diffFilter = delta --color-only
 [user]
